--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
+body {
+  margin: 111px;
+  padding: 111px;
+  font-family: sans-serif;
+  background: rgb(77, 77, 77);
+  color: rgb(255, 255, 255);
+}
+
+/* Path: chatgpt-adrian/src/App.css */
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.TextArea {
+  width: 444px;
+  height: 111px;
+  border: 1rem;
+  border-color: azure;
+  background: rgb(222, 222, 222);
+  color: rgb(0, 0, 0);
+  font-size: 1.5em;
+  padding: 1em;
+  resize: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Romeo {
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Juliet {
+  width: 444px;
+  height: 444px;
+  /* width: 444px;
+  height: 333px;
+  border: 1rem;
+  border-color: azure;
+  background: rgb(222, 222, 222);
+  color: rgb(0, 0, 0); */
+  font-size: 1em;
+  padding: 1em;
+  resize: none;
+  align-items: left;
 }
