--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: 'Parisienne', cursive;
-  background: rgb(77, 77, 77);
+  background: 	#4B0082;
   color: rgb(255, 255, 255);
 }
 
@@ -38,10 +38,11 @@ body {
   font-size: 1.5em;
   padding: 1em;
   resize: none;
+  font-family: 'Parisienne', cursive;
 }
 
 .Romeo {
-  
+  font-size: 1.25em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -56,7 +57,7 @@ body {
   border-color: azure;
   background: rgb(222, 222, 222);
   color: rgb(0, 0, 0); */
-  font-size: 1em;
+  font-size: 1.25em;
   padding: 1em;
   resize: none;
   align-items: center;
@@ -71,8 +72,8 @@ body {
 	outline: none;
 	border-radius: 5px;
 	overflow: hidden;
-	font-family: "Quicksand", sans-serif;
-	font-size: 16px;
+	font-family: 'Parisienne', cursive;
+	font-size: 22px;
 	font-weight: 500;
 	cursor: pointer;
   transition: background 0.2s ease-in-out;
